<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".editarRespostas">


        <EditText
            android:id="@+id/editTextTextMultiLine8"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/resposta8"
            android:inputType="textMultiLine"
            android:text="@string/resposta8"
            app:layout_constraintBottom_toTopOf="@+id/button6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName8"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine7" />

        <EditText
            android:id="@+id/editTextTextPersonName8"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="center"
            android:hint="@string/pergunta8"
            android:inputType="textPersonName"
            android:text="@string/pergunta8"
            app:layout_constraintBottom_toTopOf="@+id/button6"
            app:layout_constraintEnd_toStartOf="@+id/editTextTextMultiLine8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName6" />

        <EditText
            android:id="@+id/editTextTextMultiLine7"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/resposta7"
            android:inputType="textMultiLine"
            android:text="@string/resposta7"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextMultiLine8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName6"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine6" />

        <EditText
            android:id="@+id/editTextTextPersonName7"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="center"
            android:hint="@string/pergunta6"
            android:inputType="textPersonName"
            android:text="@string/pergunta6"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName6"
            app:layout_constraintEnd_toStartOf="@+id/editTextTextMultiLine6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName5" />

        <EditText
            android:id="@+id/editTextTextMultiLine6"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/resposta6"
            android:inputType="textMultiLine"
            android:text="@string/resposta6"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextMultiLine7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName7"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine5" />

        <EditText
            android:id="@+id/editTextTextPersonName6"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="center"
            android:hint="@string/pergunta7"
            android:inputType="textPersonName"
            android:text="@string/pergunta7"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName8"
            app:layout_constraintEnd_toStartOf="@+id/editTextTextMultiLine7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName7" />

        <EditText
            android:id="@+id/editTextTextMultiLine5"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/resposta5"
            android:inputType="textMultiLine"
            android:text="@string/resposta5"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextMultiLine6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName5"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine4" />

        <EditText
            android:id="@+id/editTextTextPersonName5"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="center"
            android:hint="@string/pergunta5"
            android:inputType="textPersonName"
            android:text="@string/pergunta5"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName7"
            app:layout_constraintEnd_toStartOf="@+id/editTextTextMultiLine5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4" />

        <EditText
            android:id="@+id/editTextTextPersonName4"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="center"
            android:hint="@string/pergunta4"
            android:inputType="textPersonName"
            android:text="@string/pergunta4"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName5"
            app:layout_constraintEnd_toStartOf="@+id/editTextTextMultiLine4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

        <EditText
            android:id="@+id/editTextTextMultiLine4"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/resposta4"
            android:inputType="textMultiLine"
            android:text="@string/resposta4"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextMultiLine5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName4"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine3" />

        <EditText
            android:id="@+id/editTextTextMultiLine3"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/resposta3"
            android:inputType="textMultiLine"
            android:text="@string/resposta3"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextMultiLine4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName2"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine2" />

        <EditText
            android:id="@+id/editTextTextPersonName3"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="center"
            android:hint="@string/pergunta1"
            android:inputType="textPersonName"
            android:text="@string/pergunta2"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName2"
            app:layout_constraintEnd_toStartOf="@+id/editTextTextMultiLine2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName1" />

        <EditText
            android:id="@+id/editTextTextMultiLine2"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/resposta1"
            android:inputType="textMultiLine"
            android:text="@string/resposta2"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextMultiLine3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName3"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine" />

        <EditText
            android:id="@+id/editTextTextPersonName1"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="9dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="center"
            android:hint="@string/pergunta1"
            android:inputType="textPersonName"
            android:text="@string/pergunta1"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName3"
            app:layout_constraintEnd_toStartOf="@+id/editTextTextMultiLine"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

        <EditText
            android:id="@+id/editTextTextMultiLine"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/resposta1"
            android:inputType="textMultiLine"
            android:text="@string/resposta1"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextMultiLine2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName1"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="center"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/editarResposta_titulo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="center"
            android:hint="@string/pergunta3"
            android:inputType="textPersonName"
            android:text="@string/pergunta3"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName4"
            app:layout_constraintEnd_toStartOf="@+id/editTextTextMultiLine3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:onClick="salvarDadods"
            android:text="@string/editar_respostaAtualizaarr"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>